# semantic_change

./: README.md  main.py  pyproject.toml
notebooks/: analysis.html  analysis.ipynb
src/semantic_change/: __init__.py  corpus.py  distance.py  profiling.py  visualization.py
